<resources>
    <string name="app_name">7BitsTask</string>
    <string name="hello_world">Hello World</string>
    <string name="name">Name</string>
    <string name="number">Number</string>
    <string name="email_id">Email ID</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="generate_otp">Generate OTP</string>
    <string name="enter_your_mobile_number">Enter your Mobile Number</string>
    <string name="profile">Profile</string>
    <string name="logout">LogOut</string>
    <string name="enter_Your_name">Enter Your Name</string>
    <string name="invalid_name">Invalide  Name</string>
    <string name="mobil_number">Enter Your Mobile Number</string>
    <string name="input_email_id">Enter Your Email ID</string>
    <string name="invalide_mobile_number">Mobile Number should be 10 Digits</string>
    <string name="invalide_email_id">Invalide  Email ID</string>
    <string name="profile_saved_message">Your Profile Saved</string>
    <string name="verificationFailed">Verification Failed</string>
    <string name="verifyPhonenoHint">Verify Phone No</string>
    <string name="OTPDescription">An 6-digit code has been sent to Mobile Number (change)</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="invalidOTP">"Invalide  OTP "</string>
    <string name="otp_resend">OTP Resend?</string>

</resources>