<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".otp.MobileNumberGetActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/llt"
        android:layout_marginLeft="@dimen/margin_10"
        android:layout_marginTop="-45dp"
        android:layout_marginRight="@dimen/margin_10"
        android:fontFamily="@font/poppins_regular"
        android:gravity="center"
        android:padding="@dimen/margin_10"
        android:text="@string/enter_your_mobile_number"
        android:textColor="@color/black" />

    <LinearLayout
        android:id="@+id/llt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="@dimen/margin_10"
        android:layout_marginRight="@dimen/margin_10"
        android:orientation="horizontal">

        <com.hbb20.CountryCodePicker
            android:id="@+id/ccp"
            android:layout_width="140dp"
            android:layout_height="42dp"
            android:layout_gravity="center"
            app:ccp_showFullName="false" />

        <EditText
            android:id="@+id/mobileNumber_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:autofillHints=""
            android:background="@color/white"
            android:fontFamily="@font/poppins_regular"
            android:hint="@string/mobile_number"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:paddingStart="@dimen/margin_10"
            android:textColor="@color/black"
            tools:ignore="RtlSymmetry" />

    </LinearLayout>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/llt"
        android:layout_marginStart="@dimen/margin_10"
        android:layout_marginTop="@dimen/margin_10"
        android:layout_marginEnd="@dimen/margin_5"
        android:background="@color/purple_500" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/generateOTP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="@dimen/margin_10"
        android:layout_marginTop="@dimen/margin_20"
        android:layout_marginRight="@dimen/margin_10"
        android:layout_marginBottom="@dimen/margin_15"
        android:background="@color/purple_900"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/generate_otp"
        android:textAllCaps="false"
        android:textColor="@color/white" />

</RelativeLayout>